# Vision

./: LICENSE  README.md  demo_contour  demo_contour.cpp
OpenCV_documentation/samples/: bgfg_gmg.cpp
build-zero-Desktop-Debug/: Makefile  zero
images/: calibration
images/calibration extrinseque/: notice.txt  solvePNP  solvePNP.cpp
images/calibration intrinseque/: imagelist.xml  imagelist_creator
openCV_documentation/doc/: opencv_cheatsheet.aux  opencv_cheatsheet.out
openCV_documentation/samples/: CMakeCache.txt  camshiftdemo.cpp  contours2
projets_decomposés/: README.txt  myfunctions.cpp  myfunctions.hpp  solvePNP  todo.txt
projets_decomposés/background_substraction/: motionTracking  motionTracking.cpp
projets_decomposés/calibration extrinseque/: notice.txt
projets_decomposés/calibration intrinseque/: README.txt  camera2.yml  imagelist.xml  pose_estimation  pose_estimation.cpp
projets_decomposés/calibration_extrinseque/: README.txt  cheesboard_extrinsec  cheesboard_extrinsec.cpp  solvePNP  solvePNP.cpp  (+1 more)
projets_decomposés/color_tracking/: CMakeLists.txt  color_tracking.cpp  demo_tracking  demo_tracking.cpp  intrinsec.yml  tracking2  tracking2.cpp
projets_decomposés/color_tracking/exemple_multiple_object/: Fruit.cpp  Fruit.h  demo_tracking  demo_tracking.cpp  multipleObjectTracking.cpp
projets_decomposés/first_project/: CMakeLists.txt  main  main.cpp
zero/: demo_tracking  demo_tracking.cpp  main.cpp  multiple_object_tracking  multiple_object_tracking.cpp  surf_tracking  surf_tracking.cpp  threeshold_snippet  threeshold_snippet.cpp  zero.pro
(+52 files in other folders)
